
	More accurate scheduling of view updates.

	Updated how tags are generated on build.  Thanks to Hendrik
	Jaeger (a.k.a. henk).

	Fixed extension extraction for column view (wasn't consistent with
	filename modifiers).  Thanks to ranousse.

	Fixed navigation to filtered-out files (e.g. from menus).  Cursor wasn't
	moved to the file.

	Fixed parsing of ":cmd &|cmd" pattern on the command-line.

0.7.7 to 0.7.8-beta

	Removed ltmain.sh script, which is part of libtool, which is not used
	anymore.  Thanks to Hendrik Jaeger (a.k.a. henk).

	Added executable() builtin function that checks whether executable exists
	at given path or in one of directories listed in $PATH.

	Added one more :if command example to documentation.  Thanks to John
	Magolske.

	Added more human-friendly (xterm-like) names for 256 colors.  Thanks to
	Michael Vetter (a.k.a. jubalh).

	Added i and I flags to :filter command to control filter case sensitivity.
	Thanks to filterfalse.

	Added filter flags to output of :filter? command and formatted output as a
	table.

	Added cancellation (handling of Ctrl-C) for FUSE mounting (but not
	unmounting).

	Added multiblock "selection" (in quotes because it's also block
	deselection and inversion of selection for completeness).  Thanks to
	ranousse, Michelle Bonk (a.k.a. unixtechie).

	Added av normal mode shortcut that activates selection amending mode.

	Added/updated av/v/V visual mode keys to switch type of current visual mode.

	Added Ctrl-G key to visual selection amending mode, which switches kind of
	amending (append/remove/invert).

	Added ":highlight clear" to reset to builtin colors.  This balances
	change in resetting color scheme to default one.  Useful for building color
	schemes that are partially based on the builtin one.

	Added full command names to the manual page to ease searching them.
	Thanks to y2kbugger.

	Added 'syscalls' boolean option.  It makes Vifm prefer to perform